--- a/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/AdminPrincipal.form
+++ b/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/AdminPrincipal.form
@@ -43,6 +43,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanel1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="66" green="66" red="66" type="rgb"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -58,14 +63,16 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jSeparator2" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jScrollPane1" min="-2" pref="617" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane1" min="-2" pref="585" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="btnRecargarTabla" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
-                                      <Component id="btnNuevoUsuario" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
-                                      <Component id="btnBorrarUsuario" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
-                                      <Component id="btnEditarUsuario" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
-                                      <Component id="btnSalir" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
+                                      <Component id="btnEditarUsuario" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                                      <Component id="btnNuevoUsuario" min="-2" pref="224" max="-2" attributes="0"/>
+                                      <Component id="btnBorrarUsuario" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                          <Component id="btnSalir" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                                          <Component id="btnRecargarTabla" min="-2" pref="224" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                           </Group>
