cambio en textfoel del usuario nombre

--- a/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
+++ b/SistemaRolesyPermisosJavaMVC/src/main/java/Igu/UserPrincipal.form
@@ -76,8 +76,11 @@
                               <Component id="btnSAlir" min="-2" pref="193" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jLabel2" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="23" max="32767" attributes="0"/>
                   </Group>
